DDF-2644 Fix alignment of sort-item elements

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/sort-item/sort-item.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/sort-item/sort-item.less
@@ -18,6 +18,7 @@
   .sort-direction,
   .sort-remove {
       display: inline-block;
+      vertical-align: top;
   }
 
   .sort-attribute {
